# spek-X

./: .gitignore  INSTALL-zh_CN.md  INSTALL.md  MANUAL.md  Makefile.am  README-zh_CN.md  README.md  configure.ac
.github/workflows/: caching.yml  ci.yml
man/: spek.1
po/: LINGUAS  bs.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  gl.po  he.po  hu.po  id.po  it.po  ja.po  ko.po  lv.po  nb.po  nl.po  pl.po  pt_BR.po  ru.po  sk.po  spek.pot  sr@latin.po  sv.po  th.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
src/: spek-audio.cc  spek-audio.h  spek-events.h  spek-fft.cc  spek-fft.h  spek-palette.h  spek-pipeline.cc  spek-pipeline.h  spek-platform.cc  spek-platform.h  spek-preferences-dialog.cc  spek-preferences-dialog.h  spek-preferences.cc  spek-preferences.h  spek-spectrogram.cc  spek-spectrogram.h  spek-window.cc  spek-window.h  spek.cc
tests/: test-audio.cc
web/: spek
