SUBDIRS = \
	data \
	man \
	po \
	src \
	tests

EXTRA_DIST = \
	INSTALL.md \
	LICENCE.md \
	MANUAL.md \
	README.md \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	lic/Expat \
	lic/GPL \
	lic/IJG \
	lic/LGPL \
	lic/libpng \
	lic/libtiff \
	lic/regex \
	lic/wxWindows \
	lic/zlib \
	tests/samples

DISTCLEANFILES = \
	intltool-extract \
	intltool-merge \
	intltool-update
